--- a/semana10/labex-project/package.json
+++ b/semana10/labex-project/package.json
@@ -10,6 +10,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "react-select-country-list": "^2.2.3",
     "styled-components": "^5.3.0",
     "web-vitals": "^1.1.2"
   },
