--- a/semana15/labebank-project/package.json
+++ b/semana15/labebank-project/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "tsc && node ./build/index.js",
-    "dev-start": "ts-node-dev --transpile-only --ignore-watch node_modules ./src/index.ts"
+    "dev-start": "ts-node-dev --transpile-only --ignore-watch node_modules ./src/index.ts",
+    "sandbox": "codesandbox ./"
   },
   "keywords": [],
   "author": "bruno-silva-paiva",
@@ -19,6 +20,7 @@
     "typescript": "^4.3.5"
   },
   "dependencies": {
+    "codesandbox": "^2.2.3",
     "cors": "^2.8.5",
     "express": "^4.17.1"
   }
