--- a/semana16/todolist-project/package.json
+++ b/semana16/todolist-project/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "tsc && node ./build/index.js",
-    "dev-start": "ts-node-dev --transpile-only --ignore-watch node_modules ./src/index.ts"
+    "dev-start": "ts-node-dev --transpile-only --ignore-watch node_modules ./src/index.ts",
+    "sandbox": "codesandbox ./"
   },
   "keywords": [],
   "author": "bruno-silva-paiva",
@@ -19,10 +20,12 @@
     "typescript": "^4.3.5"
   },
   "dependencies": {
+    "codesandbox": "^2.2.3",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "knex": "^0.95.7",
+    "moment": "^2.29.1",
     "mysql": "^2.18.1"
   }
 }
