--- a/semana17/labenuSystem/package.json
+++ b/semana17/labenuSystem/package.json
@@ -8,6 +8,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "knex": "^0.95.8",
+    "moment": "^2.29.1",
     "mysql": "^2.18.1"
   },
   "devDependencies": {
