--- a/semana18/labecommerce-backend/package.json
+++ b/semana18/labecommerce-backend/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "tsc && node ./build/index.js",
-    "dev-start": "ts-node-dev --transpile-only --ignore-watch node_modules ./src/index.ts",
-    "migrations": "tsnd ./src/data/migrations.ts"
+    "dev-start": "ts-node-dev --transpile-only --ignore-watch node_modules ./src/index.ts"
   },
   "keywords": [],
   "author": "bruno-silva",
