--- a/semana19/cookenu-projeto/package.json
+++ b/semana19/cookenu-projeto/package.json
@@ -18,6 +18,7 @@
     "@types/jsonwebtoken": "^8.5.4",
     "@types/knex": "^0.16.1",
     "@types/node": "^16.4.14",
+    "@types/nodemailer": "^6.4.4",
     "@types/uuid": "^8.3.1",
     "moment": "^2.29.1",
     "ts-node-dev": "^1.1.8",
@@ -31,6 +32,7 @@
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.21.21",
     "mysql": "^2.18.1",
+    "nodemailer": "^6.6.3",
     "uuid": "^8.3.2"
   }
 }
