--- a/semana21/aula62/package.json
+++ b/semana21/aula62/package.json
@@ -4,16 +4,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dev": "tsnd --transpile-only --ignore-watch node_modules ./src/index.ts",
     "test": "jest"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@types/jest": "^25.2.3",
-    "@types/node": "^14.0.6",
-    "jest": "^26.0.1",
-    "ts-jest": "^26.1.0",
-    "ts-node-dev": "^1.0.0-pre.44",
-    "typescript": "^3.9.3"
+    "@types/node": "^14.17.11",
+    "jest": "^26.6.3",
+    "ts-jest": "^26.5.6",
+    "ts-node-dev": "^1.1.8",
+    "typescript": "^3.9.10"
   }
 }
