--- a/semana21/aula64/package.json
+++ b/semana21/aula64/package.json
@@ -1,22 +1,34 @@
 {
-  "name": "aula64",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "start": "tsc && node ./build/index.js",
-    "dev": "tsnd --transpile-only --ignore-watch node_modules ./src/index.ts",
-    "test": "jest"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "@types/jest": "^27.0.1",
-    "@types/node": "^16.7.1",
-    "jest": "^27.0.6",
-    "ts-jest": "^27.0.5",
-    "ts-node-dev": "^1.1.8",
-    "typescript": "^4.3.5"
-  }
+   "name": "testes-no-backend",
+   "version": "1.0.0",
+   "description": "",
+   "main": "index.js",
+   "scripts": {
+      "start": "tsc && node ./build/src/index.js",
+      "dev": " ts-node-dev --transpile-only --ignore-watch node_modules ./src/index.ts",
+      "test": "jest"
+   },
+   "author": "Labenu",
+   "license": "ISC",
+   "dependencies": {
+      "bcryptjs": "^2.4.3",
+      "dotenv": "^8.2.0",
+      "express": "^4.17.1",
+      "jsonwebtoken": "^8.5.1",
+      "knex": "^0.21.1",
+      "mysql": "^2.18.1",
+      "uuid": "^8.0.0"
+   },
+   "devDependencies": {
+      "@types/bcryptjs": "^2.4.2",
+      "@types/express": "^4.17.6",
+      "@types/jest": "^25.2.3",
+      "@types/jsonwebtoken": "^8.5.0",
+      "@types/knex": "^0.16.1",
+      "@types/uuid": "^7.0.3",
+      "jest": "^26.0.1",
+      "ts-jest": "^26.1.0",
+      "ts-node-dev": "^1.0.0-pre.44",
+      "typescript": "^3.9.2"
+   }
 }
