--- a/semana22/wirecard-project/package.json
+++ b/semana22/wirecard-project/package.json
@@ -21,6 +21,7 @@
     "@types/node": "^16.7.9",
     "@types/uuid": "^8.3.1",
     "jest": "^27.1.0",
+    "moment": "^2.29.1",
     "ts-jest": "^27.0.5",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.4.2"
