--- a/semana22/wirecard-project/package.json
+++ b/semana22/wirecard-project/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "tsc && node ./build/index.js",
     "dev": "tsnd --transpile-only --ignore-watch node_modules ./src/index.ts",
-    "test": "jest"
+    "test": "jest",
+    "migrations": "tsnd ./src/migrations.ts"
   },
   "keywords": [],
   "author": "",
