--- a/semana24/cubo-project/cubo-backend/package.json
+++ b/semana24/cubo-project/cubo-backend/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "cubo-backend",
+  "name": "wirecard-project",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "start": "tsc && node ./build/index.js",
     "dev": "tsnd --transpile-only --ignore-watch node_modules ./src/index.ts",
-    "test": "jest"
+    "test": "jest",
+    "migrations": "tsnd ./src/migrations.ts"
   },
   "keywords": [],
   "author": "",
@@ -15,15 +16,16 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/jest": "^27.0.1",
     "@types/jsonwebtoken": "^8.5.5",
     "@types/knex": "^0.16.1",
-    "@types/node": "^16.9.6",
+    "@types/node": "^16.7.9",
     "@types/uuid": "^8.3.1",
-    "jest": "^27.2.1",
+    "jest": "^27.1.0",
     "moment": "^2.29.1",
     "ts-jest": "^27.0.5",
     "ts-node-dev": "^1.1.8",
-    "typescript": "^4.4.3"
+    "typescript": "^4.4.2"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -31,7 +33,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "knex": "^0.95.11",
+    "knex": "^0.95.10",
     "mysql": "^2.18.1",
     "uuid": "^8.3.2"
   }
